--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -12,13 +12,10 @@
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
                 <span class="chatIconButton" ng-click="open('runningDevice','lg')">
-                    <i class="iconfont icon-guanlian"></i>复制
+                    <i class="iconfont icon-guanlian"></i>查看执行记录
                 </span>                
-                <a class="chatIconButton" ui-sref="device" target="_blank">
-                    <i class="iconfont icon-brush_fill"></i>剪切
-                </a>
                 <span class="chatIconButton">
-                    <i class="iconfont icon-import"></i>粘贴
+                    <i class="iconfont icon-brush_fill"></i>查看报表
                 </span>
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
