--- a/app/tpls/home/projectNavComponent.html
+++ b/app/tpls/home/projectNavComponent.html
@@ -3,10 +3,7 @@
 <div class="projectNav" style="overflow: hidden;">
     <div class="leftNavList useCaseTree">
         <div class="title">
-            组件树
-            <span class="chatIconButton floatright treefunicon" data-tip="同步生成用例目录">
-                    <i class="iconfont icon-tongbusynchronize4"></i>
-                </span>
+            组件组           
             <span class="chatIconButton floatright treefunicon" data-tip="删除节点">
                     <i class="iconfont icon-empty"></i>
                 </span>
