--- a/app/tpls/home/projectNavTestset.html
+++ b/app/tpls/home/projectNavTestset.html
@@ -1,12 +1,12 @@
 <style type="text/css">
 </style>
 <div class="projectNav" style="overflow: hidden;">
+	<div class="customFilterBtn" ng-click="open('addTestSet')">
+        <a class="customFilterSave" href="">新增测试集</a>
+    </div>
     <div class="leftNavList useCaseTree">
         <div class="title">
-            测试集树
-            <span class="chatIconButton floatright treefunicon" data-tip="同步生成用例目录">
-                    <i class="iconfont icon-tongbusynchronize4"></i>
-                </span>
+            测试集树         
             <span class="chatIconButton floatright treefunicon" data-tip="删除节点">
                     <i class="iconfont icon-empty"></i>
                 </span>
