--- a/app/tpls/home/main/demand/useCaseScenarioUsecase.html
+++ b/app/tpls/home/main/demand/useCaseScenarioUsecase.html
@@ -41,7 +41,7 @@
                 <div class="flex"></div>
             </div>
             <div class="projectBodyContent projectBodyContent2">
-                <div class="useCaseList usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
+                <div class=" usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
                     <div class="useCaseListfunc" style="line-height: 43px;">
                         <div class="dropdownDefault floatleft" dropdown>
                             <div dropdown-toggle class="dropdowntoggle">
@@ -113,7 +113,7 @@
                         <div ui-grid="gridOptionsUsecase" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
                     </div>
                 </div>
-                <div class="useCaseList usecaseListPanel floatright" style="width: 40%" ng-style="useCaseListStyle">
+                <div class=" usecaseListPanel floatright" style="width: 40%" ng-style="useCaseListStyle">
                     <div class="useCaseListfunction">
                         <span class="floatleft selectNum">已选中2项：</span>
                         <span class="chatIconButton">
