--- a/app/tpls/home/topbar.html
+++ b/app/tpls/home/topbar.html
@@ -5,7 +5,7 @@
 		<a class="topbarLink" href="" ng-class="{'current':topNavIndex==0}" ui-sref="index.task({num:0})">任务</a>
 		<a class="topbarLink" ng-class="{'current':topNavIndex==1}" href="" ui-sref="index.component({num:1})">组件</a>
 		 <a class="topbarLink" ng-class="{'current':topNavIndex==2}" href="" ui-sref="index.demand({num:2})">需求</a>
-        <a class="topbarLink" ng-class="{'current':topNavIndex==3}" href="" ui-sref="index.usecase({num:3})">用例</a>
+        <a class="topbarLink" ng-class="{'current':topNavIndex==3}" href="" ui-sref="index.usecase({num:3})">测试用例</a>
         <a class="topbarLink" ng-class="{'current':topNavIndex==4}" href="" ui-sref="index.testset({num:4})">测试集</a>       
 		<a class="topbarLink" ng-class="{'current':topNavIndex==5}" href="" ui-sref="index.bug({num:5})">缺陷</a>		        
 		<a class="topbarLink" ng-class="{'current':topNavIndex==6}" href="" ui-sref="statement({num:6})">执行记录</a>
