--- a/app/tpls/modal/addTestSet.html
+++ b/app/tpls/modal/addTestSet.html
@@ -15,9 +15,9 @@
             <textarea class="projectTextarea"></textarea>
         </li>
         <li>
-            <h1>关联测试集：</h1>
+            <h1>关联用例：</h1>
             <div class="inputSelect floatleft" ng-click="open('createTaskTestset')">
-                <input type="text" class="inputText" disabled="disabled" placeholder="测试集1;测试集2">
+                <input type="text" class="inputText" disabled="disabled" placeholder="用例1">
                 <span class="inputSelectBtn">
                     <i class="iconfont icon-trees"></i>
                 </span>
