--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -1,47 +1,63 @@
 <style type="text/css">
+
 </style>
 <div class="projectBodyBox" ng-controller="modalCtrl">
-    <div class="projectBodyTitle">
-        用例管理
-        <div class="floatright btn_add" ng-click="open('newDemand','lg')">
-            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 提需求
-        </div>
-    </div>
-    <div class="projectBodyContent" style="top: 56px;" ng-controller="usecaseCtrl">
-        <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
-            <div class="useCaseListfunction">
-                <span class="floatleft selectNum">已选中2项：</span>
-               <span class="chatIconButton">
+	<div class="projectBodyTitle">
+		用例管理
+		<div class="floatright btn_add" ng-click="open('newDemand','lg')">
+			<span class="cicleicon"><i class="iconfont icon-add"></i></span> 提需求
+		</div>
+	</div>
+	<div class="projectBodyContent" style="top: 56px;" ng-controller="usecaseCtrl">
+		<div class="useCaseList usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
+			<div class="useCaseListfunction">
+				<span class="floatleft selectNum">已选中2项：</span>
+				<span class="chatIconButton">
                     <i class="iconfont icon-guanlian"></i>复制
-                </span>                
-                <span class="chatIconButton">
+                </span>
+				<span class="chatIconButton">
                     <i class="iconfont icon-brush_fill"></i>剪切
                 </span>
-                <span class="chatIconButton">
+				<span class="chatIconButton">
                     <i class="iconfont icon-import"></i>粘贴
                 </span>
-                <span class="chatIconButton">
+				<span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
                 </span>
-                <span class="chatIconButton">
+				<span class="chatIconButton">
                     <i class="iconfont icon-tongji"></i>用例统计
                 </span>
-                <span class="chatIconButton">
+				<span class="chatIconButton">
                     <i class="iconfont icon-import"></i>导入
                 </span>
-                <span class="chatIconButton">
+				<span class="chatIconButton">
                     <i class="iconfont icon-daochu2"></i>导出
                 </span>
-                <div class="floatright searchBox">
-                    <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
-                    <i class="iconfont icon-search"></i>
-                </div>
-                <div class="clear"></div>
-            </div>
-            <div class="userCaseListTable">
-                <div style="" ui-grid="gridOptionsUsecase"  ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
-            </div>
-            
-        </div>
-    </div>
+				<div class="floatright searchBox">
+					<input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+					<i class="iconfont icon-search"></i>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="userCaseListTable">
+				<div style="" ui-grid="gridOptionsUsecase" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+			</div>
+
+		</div>
+		<div class="useCaseList usecaseListPanel floatright" style="width: 40%" ng-style="useCaseListStyle">
+			<div class="useCaseListfunction">
+				<span class="floatleft selectNum">已选中2项：</span>
+				<span class="chatIconButton">
+                            <i class="iconfont icon-tianjia-copy"></i>添加数据
+                        </span>
+				<span class="chatIconButton">
+                            <i class="iconfont icon-empty_fill"></i>删除数据
+                        </span>
+				<div class="clear"></div>
+			</div>
+			<div class="userCaseListTable">
+				<div ui-grid="gridOptionsUsecaseData" ui-grid-autoResize ui-grid-selection ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+			</div>
+		</div>
+	</div>
 </div>
