--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -11,7 +11,7 @@
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
-                <span class="chatIconButton" ng-click="open('runningDevice','lg')">
+                <span class="chatIconButton" ui-sref="statement({num:6})">
                     <i class="iconfont icon-guanlian"></i>查看执行记录
                 </span>                
                 <span class="chatIconButton">
