--- a/app/tpls/home/topbarProject.html
+++ b/app/tpls/home/topbarProject.html
@@ -2,7 +2,9 @@
 </style>
 <div class="topbar">
 	<div class="floatleft leftMenu">
-		<a class="topbarLink" href="" ui-sref="index.project">AR</a>
+		<a class="topbarLink" href="" ui-sref="index.project" style="padding: 0;">
+			<img src="/images/logo.png" style="height: 48px;"/>
+		</a>
 	</div>
 	<div class="floatright rightMenu">	
 		<a class="topbarLink" href="" ui-sref="equipment">设备管理</a>
