--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 	<div class="projectBodyContent" style="top: 56px;" ng-controller="usecaseCtrl">
-		<div class="useCaseList usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
+		<div class="usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
 			<div class="useCaseListfunction">
 				<span class="floatleft selectNum">已选中2项：</span>
 				<span class="chatIconButton">
@@ -44,7 +44,7 @@
 			</div>
 
 		</div>
-		<div class="useCaseList usecaseListPanel floatright" style="width: 40%" ng-style="useCaseListStyle">
+		<div class="usecaseListPanel floatright" style="width: 40%;" ng-style="useCaseListStyle">
 			<div class="useCaseListfunction">
 				<span class="floatleft selectNum">已选中2项：</span>
 				<span class="chatIconButton">
