--- a/app/tpls/home/main.html
+++ b/app/tpls/home/main.html
@@ -1,4 +1,4 @@
-<div ng-controller="modalCtrl" ng-controller="modalCtrl">
+<div ng-controller="modalCtrl">
     <div ng-click="fadeOut()" ui-view="projectNav" style="width:250px; display: block;position: absolute; top: 0px; bottom:0px;z-index: 102;border-right:1px solid #e3e3e3" ng-style="projectNavStyle" class="">
     </div>
     <div class="leftNavOpen" ng-click="closeLeftnav()" ng-class="{'leftNavClose':leftnavOpen}">
