--- a/app/tpls/home/main/projectlist/projectManage.html
+++ b/app/tpls/home/main/projectlist/projectManage.html
@@ -3,20 +3,18 @@
 <div class="projectBodyBox" ng-controller="projectListCtrl">
     <div class="projectBodyTitle">
         项目管理
-        <div class="floatright btn_add" ui-sref="index.project.create">
-            <span class="cicleicon"><i class="iconfont icon-add"></i></span>新建项目
-        </div>
+       
     </div>
     <div class="projectBodyContent" style="top: 56px;">
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">我创建的项目</span>   
-                <span class="chatIconButton floatleft"  ng-click="open('tableColumn')">
+                <!--<span class="chatIconButton floatleft"  ng-click="open('tableColumn')">
                     <i class="iconfont icon-liebiao"></i>自定义列                   
                 </span>
                 <span class="chatIconButton floatleft"  ng-click="open('mubanCreateproject')">
                     <i class="iconfont icon-moban"></i>模板创建项目               
-                </span> 
+                </span> -->
                 <div class="floatright searchBox marginl_5">
                     <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
                     <i class="iconfont icon-search"></i>
