--- a/app/tpls/home/main/statement/statementManage.html
+++ b/app/tpls/home/main/statement/statementManage.html
@@ -19,7 +19,7 @@
 	<div class="projectBodyTitle">
 		执行记录
 	</div>
-	<div class="projectBodyContent" style="top: 56px;" ng-controller="statementCtrl">
+	<div class="projectBodyContent" style="top: 56px;left:0px" ng-controller="statementCtrl">
 		<div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
 			<div class="useCaseListfunc" style="line-height: 43px;">
 				<div class="dropdownDefault floatleft" dropdown>
@@ -72,7 +72,6 @@
 			<div class="userCaseListTable">
 				<div ui-grid="gridOptionsStatement" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
 			</div>
-
 		</div>
 	</div>
 </div>
