--- a/app/tpls/home/topbarProject.html
+++ b/app/tpls/home/topbarProject.html
@@ -12,7 +12,7 @@
         <div class="dropdownDefault floatleft" dropdown>
             <a href="" class="topbarLink" dropdown-toggle>账户昵称</a>
             <ul class="dropdown-menu transition" dropdown-menu role="menu">              
-                <li><span>切换项目</span></li>
+                <li ui-sref="index.project"><span>切换项目</span></li>
                 <li><span>个人信息</span></li>
                 <li><span>修改密码</span></li>
                 <li class="line"></li>
