--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加组件
+    <h3>新增组件
     <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
     </h3>
 </div>
