--- a/app/tpls/modal/functionPoint.html
+++ b/app/tpls/modal/functionPoint.html
@@ -10,7 +10,8 @@
 				<script type="text/ng-template" id="nodes_renderer.html">
 					<span ui-tree-handle></span>
 					<div class="tree-node tree-node-content">
-						<a class="treeToggle" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><i class="iconfont" ng-class="collapsed?'icon-unfold-copy':'icon-unfold'"></i></a>						
+						<a class="treeToggle" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><i class="iconfont" ng-class="collapsed?'icon-unfold-copy':'icon-unfold'"></i></a>		
+						<a class="treeToggle" ng-if="node.nodes && node.nodes.length <= 0" ></a>	
 						<i class="iconfont icon-wenjianjia1" style="color: #ff9800;font-size: 12px;"></i>
 						<span ng-show="!this.isEdit" class="treeText">
                             {{node.title | limitTo:10}}{{node.title.length>10?'...':''}}
