--- a/app/tpls/home/main/back-stageManagement/projectManagement.html
+++ b/app/tpls/home/main/back-stageManagement/projectManagement.html
@@ -1,92 +1,31 @@
 <style type="text/css">
-	.searchUser {
-		width: 220px;
-		height: 25px;
-		border: 1px solid #e4e6f1;
-		position: relative;
-		margin-top: 9px;
-		margin-right: 30px;
-	}
-	
-	.searchUser input {
-		width: 190px;
-		padding: 0 10px;
-		border-right: 1px solid #E4E6F1;
-		font-size: 12px;
-		height: 23px;
-		position: absolute;
-	}
-	
-	.searchUser .iconfont {
-		position: absolute;
-		height: 25px;
-		line-height: 25px;
-		top: 0;
-		right: 7px;
-	}
-	
-	.selectState {
-		width: 120px;
-		height: 25px;
-		line-height: 25px;
-		border: 1px solid #E4E6F1;
-		font-size: 12px;
-		color: #313131;
-		margin-right: 20px;
-	}
 </style>
 <div class="projectBodyBox" ng-controller="projectManagementCtrl">
-	<div class="projectBodyTitle">
-		项目列表
-	</div>
-	<div class="projectBodyContent" style="left: 0;top: 46px;" ng-controller="modalCtrl">
-		<div class="useCaseList " style="bottom:0px;overflow-y: auto;min-height: 450px;" ng-style="useCaseListStyle">
-			<div class="useCaseListfunction">
-				<span class="searchUser floatleft">
-            		<input type="text" name="" id="" value="" placeholder="根据项目名或姓名搜索"/>
-            		<i class="iconfont icon-search"></i>
-            	</span>
-				<span class="floatleft">
-             		<select name="" class="selectState">
-             			<option value="">所有状态</option>
-             			<option value="">状态1</option>
-             			<option value="">状态2</option>
-             		</select>
-            	</span>
-				<div class="dropdownBox floatleft dateBoxClear" dropdown>
-					<div dropdown-toggle class="dropdowntoggle">
-						<span class="dropdowntoggletext">时间范围</span>
-						<i class="iconfont icon-unfold"></i>
-					</div>
-					<ul class="dropdown-menu dropdown-menu1 tableDropdownMenu" dropdown-menu role="menu">
-						<li class="datetimePicker">
-							<a>开始时间：
-								<input type="text" class="inputText inputTextl_250" datepicker-popup="{{format}}" ng-model="dat1" is-open="popup1.opened" alt-input-formats="altInputFormats" ng-click="$event.stopPropagation();open1()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
-								<div class="clear"></div>
-							</a>
-						</li>
-						<li class="datetimePicker">
-							<a>结束时间：
-								<input type="text" class="inputText inputTextl_250" datepicker-popup="{{format1}}" ng-model="dat1" is-open="popup2.opened" alt-input-formats="altInputFormats1" ng-click="$event.stopPropagation();open2()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
-								<div class="clear"></div>
-							</a>
-						</li>
-						<li class="marginb_10">
-							<a>
-								<input type="button" class="btn btn-sm btn-success" value="确认">
-								<input type="button" class="btn btn-sm btn-info" value="清空">、
-							</a>
-						</li>
-					</ul>
-				</div>
-				<span class="chatIconButton floatleft" style="margin-left: 10px;">
-             		全部
-             	</span>
-				<div class="clear"></div>
-			</div>
-			<div class="userCaseListTable">
-				<div style="" ui-grid="gridOptionsTask" ui-grid-autoResize ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
-			</div>
-		</div>
-	</div>
+    <div class="projectBodyTitle">
+        项目管理
+        <div class="floatright btn_add" ui-sref="projectManagement.create">
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span>新建项目
+        </div>
+    </div>
+    <div class="projectBodyContent" style="top: 56px;left: 0px;">
+        <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle" ng-controller="modalCtrl">
+            <div class="useCaseListfunction">
+                <span class="floatleft selectNum">我创建的项目</span>   
+                <span class="chatIconButton floatleft"  ng-click="open('tableColumn')">
+                    <i class="iconfont icon-liebiao"></i>自定义列                   
+                </span>
+                <span class="chatIconButton floatleft"  ng-click="open('mubanCreateproject')">
+                    <i class="iconfont icon-moban"></i>模板创建项目               
+                </span> 
+                <div class="floatright searchBox marginl_5">
+                    <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+                    <i class="iconfont icon-search"></i>
+                </div>             
+                <div class="clear"></div>
+            </div>
+            <div class="userCaseListTable">
+                <div style="" ui-grid="gridOptionsTask"  ui-grid-autoResize ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+            </div>            
+        </div>
+    </div>
 </div>
