--- a/app/tpls/home/topbarBack-stage.html
+++ b/app/tpls/home/topbarBack-stage.html
@@ -2,12 +2,12 @@
 </style>
 <div class="topbar">
 	<div class="floatleft leftMenu">
-		<a class="topbarLink"><img src="/images/logo.png" style="height: 48px;"/></a>
-        <a class="topbarLink" href=""  class="current" ui-sref="userManagement">用户管理</a>
-		<a class="topbarLink" href=""  ui-sref="projectManagement">项目管理</a>
-		<a class="topbarLink" href=""  ui-sref="roleGroupManagement">角色组管理</a>
-		<a class="topbarLink" href=""  ui-sref="defectProcess">缺陷流程定制</a>
-		<a class="topbarLink" href=""  ui-sref="dataDictionary">数据字典</a>
+		<a class="topbarLink"><img src="/images/logo.png" style="height: 48px;padding：0"/></a>
+        <a class="topbarLink" href=""  ng-class="{'current':topNavIndex==0}" ui-sref="userManagement({num:0})">用户管理</a>
+		<a class="topbarLink" href=""  ng-class="{'current':topNavIndex==1}" ui-sref="projectManagement({num:1})">项目管理</a>
+		<a class="topbarLink" href=""  ng-class="{'current':topNavIndex==2}" ui-sref="roleGroupManagement({num:2})">角色组管理</a>
+		<a class="topbarLink" href=""  ng-class="{'current':topNavIndex==3}" ui-sref="defectProcess({num:3})">缺陷流程定制</a>
+		<a class="topbarLink" href=""  ng-class="{'current':topNavIndex==4}" ui-sref="dataDictionary({num:4})">数据字典</a>
 	</div>
 	<div class="floatright rightMenu">		
         <a href="" class="topbarLink">
