--- a/app/tpls/home/main/statement/statementManage.html
+++ b/app/tpls/home/main/statement/statementManage.html
@@ -48,7 +48,7 @@
 						</li>
 						<li class="datetimePicker">
 							<a>结束时间：
-								<input type="text" class="inputText inputTextl_250" datepicker-popup="{{format1}}" ng-model="dat1" is-open="popup2.opened" alt-input-formats="altInputFormats1" ng-click="$event.stopPropagation();open2()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
+								<input type="text" class="inputText inputTextl_250" datepicker-popup="{{format1}}" ng-model="dat1" is-open="popup2.opened" alt-input-formats="altInputFormats" ng-click="$event.stopPropagation();open2()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
 								<div class="clear"></div>
 							</a>
 						</li>
