--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -14,7 +14,7 @@
                 <span class="chatIconButton" ui-sref="statement({num:6})">
                     <i class="iconfont icon-guanlian"></i>查看执行记录
                 </span>                
-                <span class="chatIconButton">
+                <span class="chatIconButton" ui-sref="statementDetail">
                     <i class="iconfont icon-brush_fill"></i>查看报表
                 </span>
                 <span class="chatIconButton">
