--- a/app/tpls/home/main1.html
+++ b/app/tpls/home/main1.html
@@ -1,5 +1,5 @@
 <div ng-controller="modalCtrl" ng-controller="modalCtrl">
-    <div ng-click="fadeOut()" ui-view="projectBody" style="position: absolute;width:auto; top: 0px; bottom:0px; right:0px; overflow-y:auto;left: 0px;" ng-style="projectBodyStyle"></div>
+    <div ng-click="fadeOut()" ui-view="projectBody" style="position: absolute;width:auto; top: 0px; bottom:0px; right:0px; overflow-y:auto;left: 0px;"></div>
     <div ui-view="projectDetail" style="position: absolute;width: 640px;top:46px; bottom:0px; background:#fff;z-index: 102;" ng-class="{true:'fadeIn',false:'fadeOut'}[isFadeIn]" class="projectDetailStyle"></div>
     <div class="loading modal"">      
     </div>
