--- a/app/tpls/home/topbar.html
+++ b/app/tpls/home/topbar.html
@@ -9,7 +9,8 @@
         <a class="topbarLink" ng-class="{'current':topNavIndex==4}" href="" ui-sref="index.testset({num:4})">测试集</a>       
 		<a class="topbarLink" ng-class="{'current':topNavIndex==5}" href="" ui-sref="index.bug({num:5})">缺陷</a>		        
 		<a class="topbarLink" ng-class="{'current':topNavIndex==6}" href="" ui-sref="statement({num:6})">执行记录</a>
-		<a class="topbarLink" ng-class="{'current':topNavIndex==7}" href="" ui-sref="index.dataPool({num:7})">数据池</a>
+		<a class="topbarLink" ng-class="{'current':topNavIndex==7}" href="" ui-sref="reservationRecord({num:7})">预约记录</a>
+		<a class="topbarLink" ng-class="{'current':topNavIndex==8}" href="" ui-sref="index.dataPool({num:8})">数据池</a>
 	</div>
 	<div class="floatright rightMenu">		
         <div class="dropdownDefault floatleft" dropdown>
