--- a/app/tpls/home/main/dataPool/dataCollection.html
+++ b/app/tpls/home/main/dataPool/dataCollection.html
@@ -2,10 +2,10 @@
 </style>
 <div class="projectBodyBox dataPoolBox">
 	<div class="projectBodyTitle">
-		<div class="floatleft">数据池</div>
+		<div class="floatleft">数据池名称</div>
 		<ul class="tabTitle clearfix">
 			<li>
-				<a href="" class="cursor_p" ng-click="isAttribute=0" ui-sref="index.dataPool">数据池管理</a>
+				<a href="" class="cursor_p" ng-click="isAttribute=0" ui-sref="index.dataPool">临时表</a>
 			</li>
 			<li class="current">
 				<a href="" class="cursor_p" >采集数据</a>
